Temporary fix for sidebar overflow problem

--- a/src/custom-lists/components/overview/sidebar/Index.css
+++ b/src/custom-lists/components/overview/sidebar/Index.css
@@ -4,6 +4,16 @@
     margin-top: 12px;
 }
 
+.wrapper {
+    min-height: 55vh;
+    min-width: 26vw;
+    overflow: auto;
+    max-height: 65vh;
+
+    /* overflow-y: scroll; */
+    overflow-x: hidden;
+}
+
 .collection {
     color: #767676;
     margin-bottom: 12px;
@@ -42,16 +52,23 @@
 }
 
 .allLists {
-    max-height: 65vh;
+    /* max-height: 65vh;
+    min-width: 26vw;
+    overflow: auto; */
+
+    overflow: hidden;
+    min-width: 24.8vw;
+    min-height: 39vh;
+    margin-bottom: 70px;
+    max-height: 63vh;
 }
 
 /* width */
 .allLists::-webkit-scrollbar {
-    width: 3px;
+    display: none;
 }
 
 /* Track */
 .allLists::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+    display: none;
 }
